# RustPracticeProjects

./: Cargo.toml  READMe.md
actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
gcd/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
quickreplace/: Cargo.toml
quickreplace/src/: main.rs
